packages/sdm-pql/src/predictive_query/grammar/PQLGrammarParser.py
# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES.
# All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# Generated from PQLGrammar.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PQLGrammarParser ( Parser ):

    grammarFileName = "PQLGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BOOL", "FQN_COLUMN", "WILDCARD_COLUMN", "PREDICT", 
                      "CLASSIFY", "RANK", "TOP", "FORECAST", "TIMEFRAMES", 
                      "FOR_EACH", "FOR", "WHERE", "ASSUMING", "AND", "OR", 
                      "NOT", "AGGR", "REL_OP", "NULL", "NEG_INFTY", "TIME_UNIT", 
                      "ID", "QUOTED_ID", "INT", "DECIMAL", "STR", "DATE", 
                      "TIME", "WS" ]

    RULE_prog = 0
    RULE_problem_spec = 1
    RULE_problem_type = 2
    RULE_top_k = 3
    RULE_forecast = 4
    RULE_target = 5
    RULE_entity = 6
    RULE_whatif = 7
    RULE_entity_list = 8
    RULE_filtered_entity_list = 9
    RULE_condition = 10
    RULE_aggregation = 11
    RULE_filtered_column = 12
    RULE_column = 13
    RULE_constant = 14
    RULE_array = 15
    RULE_datetime = 16

    ruleNames =  [ "prog", "problem_spec", "problem_type", "top_k", "forecast", 
                   "target", "entity", "whatif", "entity_list", "filtered_entity_list", 
                   "condition", "aggregation", "filtered_column", "column", 
                   "constant", "array", "datetime" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    BOOL=4
    FQN_COLUMN=5
    WILDCARD_COLUMN=6
    PREDICT=7
    CLASSIFY=8
    RANK=9
    TOP=10
    FORECAST=11
    TIMEFRAMES=12
    FOR_EACH=13
    FOR=14
    WHERE=15
    ASSUMING=16
    AND=17
    OR=18
    NOT=19
    AGGR=20
    REL_OP=21
    NULL=22
    NEG_INFTY=23
    TIME_UNIT=24
    ID=25
    QUOTED_ID=26
    INT=27
    DECIMAL=28
    STR=29
    DATE=30
    TIME=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREDICT(self):
            return self.getToken(PQLGrammarParser.PREDICT, 0)

        def target(self):
            return self.getTypedRuleContext(PQLGrammarParser.TargetContext,0)


        def problem_spec(self):
            return self.getTypedRuleContext(PQLGrammarParser.Problem_specContext,0)


        def entity(self):
            return self.getTypedRuleContext(PQLGrammarParser.EntityContext,0)


        def whatif(self):
            return self.getTypedRuleContext(PQLGrammarParser.WhatifContext,0)


        def EOF(self):
            return self.getToken(PQLGrammarParser.EOF, 0)

        def FOR_EACH(self):
            return self.getToken(PQLGrammarParser.FOR_EACH, 0)

        def FOR(self):
            return self.getToken(PQLGrammarParser.FOR, 0)

        def getRuleIndex(self):
            return PQLGrammarParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PQLGrammarParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(PQLGrammarParser.PREDICT)
            self.state = 35
            self.target()
            self.state = 36
            self.problem_spec()
            self.state = 37
            _la = self._input.LA(1)
            if not(_la==PQLGrammarParser.FOR_EACH or _la==PQLGrammarParser.FOR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 38
            self.entity()
            self.state = 39
            self.whatif()
            self.state = 40
            self.match(PQLGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Problem_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forecast(self):
            return self.getTypedRuleContext(PQLGrammarParser.ForecastContext,0)


        def problem_type(self):
            return self.getTypedRuleContext(PQLGrammarParser.Problem_typeContext,0)


        def top_k(self):
            return self.getTypedRuleContext(PQLGrammarParser.Top_kContext,0)


        def getRuleIndex(self):
            return PQLGrammarParser.RULE_problem_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProblem_spec" ):
                return visitor.visitProblem_spec(self)
            else:
                return visitor.visitChildren(self)




    def problem_spec(self):

        localctx = PQLGrammarParser.Problem_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_problem_spec)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.forecast()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.problem_type()
                self.state = 44
                self.top_k()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.top_k()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.problem_type()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Problem_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RANK(self):
            return self.getToken(PQLGrammarParser.RANK, 0)

        def CLASSIFY(self):
            return self.getToken(PQLGrammarParser.CLASSIFY, 0)

        def getRuleIndex(self):
            return PQLGrammarParser.RULE_problem_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProblem_type" ):
                return visitor.visitProblem_type(self)
            else:
                return visitor.visitChildren(self)




    def problem_type(self):

        localctx = PQLGrammarParser.Problem_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_problem_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            _la = self._input.LA(1)
            if not(_la==PQLGrammarParser.CLASSIFY or _la==PQLGrammarParser.RANK):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Top_kContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOP(self):
            return self.getToken(PQLGrammarParser.TOP, 0)

        def INT(self):
            return self.getToken(PQLGrammarParser.INT, 0)

        def getRuleIndex(self):
            return PQLGrammarParser.RULE_top_k

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTop_k" ):
                return visitor.visitTop_k(self)
            else:
                return visitor.visitChildren(self)




    def top_k(self):

        localctx = PQLGrammarParser.Top_kContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_top_k)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(PQLGrammarParser.TOP)
            self.state = 54
            self.match(PQLGrammarParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForecastContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FORECAST(self):
            return self.getToken(PQLGrammarParser.FORECAST, 0)

        def INT(self):
            return self.getToken(PQLGrammarParser.INT, 0)

        def TIMEFRAMES(self):
            return self.getToken(PQLGrammarParser.TIMEFRAMES, 0)

        def getRuleIndex(self):
            return PQLGrammarParser.RULE_forecast

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForecast" ):
                return visitor.visitForecast(self)
            else:
                return visitor.visitChildren(self)




    def forecast(self):

        localctx = PQLGrammarParser.ForecastContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_forecast)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(PQLGrammarParser.FORECAST)
            self.state = 57
            self.match(PQLGrammarParser.INT)
            self.state = 58
            self.match(PQLGrammarParser.TIMEFRAMES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TargetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(PQLGrammarParser.ConditionContext,0)


        def aggregation(self):
            return self.getTypedRuleContext(PQLGrammarParser.AggregationContext,0)


        def column(self):
            return self.getTypedRuleContext(PQLGrammarParser.ColumnContext,0)


        def getRuleIndex(self):
            return PQLGrammarParser.RULE_target

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTarget" ):
                return visitor.visitTarget(self)
            else:
                return visitor.visitChildren(self)




    def target(self):

        localctx = PQLGrammarParser.TargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_target)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.condition(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.aggregation()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.column()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(PQLGrammarParser.ColumnContext,0)


        def filtered_column(self):
            return self.getTypedRuleContext(PQLGrammarParser.Filtered_columnContext,0)


        def entity_list(self):
            return self.getTypedRuleContext(PQLGrammarParser.Entity_listContext,0)


        def filtered_entity_list(self):
            return self.getTypedRuleContext(PQLGrammarParser.Filtered_entity_listContext,0)


        def getRuleIndex(self):
            return PQLGrammarParser.RULE_entity

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntity" ):
                return visitor.visitEntity(self)
            else:
                return visitor.visitChildren(self)




    def entity(self):

        localctx = PQLGrammarParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_entity)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.column()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.filtered_column()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.entity_list()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.filtered_entity_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhatifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSUMING(self):
            return self.getToken(PQLGrammarParser.ASSUMING, 0)

        def condition(self):
            return self.getTypedRuleContext(PQLGrammarParser.ConditionContext,0)


        def getRuleIndex(self):
            return PQLGrammarParser.RULE_whatif

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhatif" ):
                return visitor.visitWhatif(self)
            else:
                return visitor.visitChildren(self)




    def whatif(self):

        localctx = PQLGrammarParser.WhatifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whatif)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PQLGrammarParser.ASSUMING:
                self.state = 71
                self.match(PQLGrammarParser.ASSUMING)
                self.state = 72
                self.condition(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Entity_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(PQLGrammarParser.ColumnContext,0)


        def REL_OP(self):
            return self.getToken(PQLGrammarParser.REL_OP, 0)

        def constant(self):
            return self.getTypedRuleContext(PQLGrammarParser.ConstantContext,0)


        def getRuleIndex(self):
            return PQLGrammarParser.RULE_entity_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntity_list" ):
                return visitor.visitEntity_list(self)
            else:
                return visitor.visitChildren(self)




    def entity_list(self):

        localctx = PQLGrammarParser.Entity_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_entity_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.column()
            self.state = 76
            self.match(PQLGrammarParser.REL_OP)
            self.state = 77
            self.constant()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Filtered_entity_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(PQLGrammarParser.ColumnContext,0)


        def REL_OP(self):
            return self.getToken(PQLGrammarParser.REL_OP, 0)

        def constant(self):
            return self.getTypedRuleContext(PQLGrammarParser.ConstantContext,0)


        def WHERE(self):
            return self.getToken(PQLGrammarParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(PQLGrammarParser.ConditionContext,0)


        def getRuleIndex(self):
            return PQLGrammarParser.RULE_filtered_entity_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFiltered_entity_list" ):
                return visitor.visitFiltered_entity_list(self)
            else:
                return visitor.visitChildren(self)




    def filtered_entity_list(self):

        localctx = PQLGrammarParser.Filtered_entity_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_filtered_entity_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.column()
            self.state = 80
            self.match(PQLGrammarParser.REL_OP)
            self.state = 81
            self.constant()
            self.state = 82
            self.match(PQLGrammarParser.WHERE)
            self.state = 83
            self.condition(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aggregation(self):
            return self.getTypedRuleContext(PQLGrammarParser.AggregationContext,0)


        def REL_OP(self):
            return self.getToken(PQLGrammarParser.REL_OP, 0)

        def constant(self):
            return self.getTypedRuleContext(PQLGrammarParser.ConstantContext,0)


        def column(self):
            return self.getTypedRuleContext(PQLGrammarParser.ColumnContext,0)


        def NOT(self):
            return self.getToken(PQLGrammarParser.NOT, 0)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PQLGrammarParser.ConditionContext)
            else:
                return self.getTypedRuleContext(PQLGrammarParser.ConditionContext,i)


        def AND(self):
            return self.getToken(PQLGrammarParser.AND, 0)

        def OR(self):
            return self.getToken(PQLGrammarParser.OR, 0)

        def getRuleIndex(self):
            return PQLGrammarParser.RULE_condition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)



    def condition(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PQLGrammarParser.ConditionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_condition, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PQLGrammarParser.AGGR]:
                self.state = 86
                self.aggregation()
                self.state = 87
                self.match(PQLGrammarParser.REL_OP)
                self.state = 88
                self.constant()
                pass
            elif token in [PQLGrammarParser.FQN_COLUMN, PQLGrammarParser.WILDCARD_COLUMN]:
                self.state = 90
                self.column()
                self.state = 91
                self.match(PQLGrammarParser.REL_OP)
                self.state = 92
                self.constant()
                pass
            elif token in [PQLGrammarParser.NOT]:
                self.state = 94
                self.match(PQLGrammarParser.NOT)
                self.state = 95
                self.condition(4)
                pass
            elif token in [PQLGrammarParser.T__0]:
                self.state = 96
                self.match(PQLGrammarParser.T__0)
                self.state = 97
                self.condition(0)
                self.state = 98
                self.match(PQLGrammarParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 108
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = PQLGrammarParser.ConditionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                        self.state = 102
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 103
                        self.match(PQLGrammarParser.AND)
                        self.state = 104
                        self.condition(4)
                        pass

                    elif la_ == 2:
                        localctx = PQLGrammarParser.ConditionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                        self.state = 105
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 106
                        self.match(PQLGrammarParser.OR)
                        self.state = 107
                        self.condition(3)
                        pass

             
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AggregationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AGGR(self):
            return self.getToken(PQLGrammarParser.AGGR, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(PQLGrammarParser.INT)
            else:
                return self.getToken(PQLGrammarParser.INT, i)

        def NEG_INFTY(self):
            return self.getToken(PQLGrammarParser.NEG_INFTY, 0)

        def column(self):
            return self.getTypedRuleContext(PQLGrammarParser.ColumnContext,0)


        def filtered_column(self):
            return self.getTypedRuleContext(PQLGrammarParser.Filtered_columnContext,0)


        def TIME_UNIT(self):
            return self.getToken(PQLGrammarParser.TIME_UNIT, 0)

        def getRuleIndex(self):
            return PQLGrammarParser.RULE_aggregation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregation" ):
                return visitor.visitAggregation(self)
            else:
                return visitor.visitChildren(self)




    def aggregation(self):

        localctx = PQLGrammarParser.AggregationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_aggregation)
        self._la = 0 # Token type
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(PQLGrammarParser.AGGR)
                self.state = 114
                self.match(PQLGrammarParser.T__0)
                self.state = 117
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 115
                    self.column()
                    pass

                elif la_ == 2:
                    self.state = 116
                    self.filtered_column()
                    pass


                self.state = 119
                self.match(PQLGrammarParser.T__2)
                self.state = 120
                _la = self._input.LA(1)
                if not(_la==PQLGrammarParser.NEG_INFTY or _la==PQLGrammarParser.INT):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 121
                self.match(PQLGrammarParser.T__2)
                self.state = 122
                self.match(PQLGrammarParser.INT)
                self.state = 123
                self.match(PQLGrammarParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(PQLGrammarParser.AGGR)
                self.state = 126
                self.match(PQLGrammarParser.T__0)
                self.state = 129
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 127
                    self.column()
                    pass

                elif la_ == 2:
                    self.state = 128
                    self.filtered_column()
                    pass


                self.state = 131
                self.match(PQLGrammarParser.T__2)
                self.state = 132
                _la = self._input.LA(1)
                if not(_la==PQLGrammarParser.NEG_INFTY or _la==PQLGrammarParser.INT):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 133
                self.match(PQLGrammarParser.T__2)
                self.state = 134
                self.match(PQLGrammarParser.INT)
                self.state = 135
                self.match(PQLGrammarParser.T__2)
                self.state = 136
                self.match(PQLGrammarParser.TIME_UNIT)
                self.state = 137
                self.match(PQLGrammarParser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.match(PQLGrammarParser.AGGR)
                self.state = 140
                self.match(PQLGrammarParser.T__0)
                self.state = 143
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 141
                    self.column()
                    pass

                elif la_ == 2:
                    self.state = 142
                    self.filtered_column()
                    pass


                self.state = 145
                self.match(PQLGrammarParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Filtered_columnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(PQLGrammarParser.ColumnContext,0)


        def WHERE(self):
            return self.getToken(PQLGrammarParser.WHERE, 0)
